[gd_scene load_steps=11 format=3 uid="uid://crvqaxnmn5mx4"]

[ext_resource type="Script" path="res://src/scene/menu/Menu.gd" id="1_evpow"]
[ext_resource type="PackedScene" path="res://src/util/background/Background.tscn" id="2_nct3a"]
[ext_resource type="Texture2D" uid="uid://ck8h8kkj60iwa" path="res://assets/ui/bars/bars_center/Decorated_bar.png" id="3_kbq12"]
[ext_resource type="Texture2D" uid="uid://diaaemenansya" path="res://assets/ui/buttons/buttons_rect/1_orange_button.png" id="4_ydvrn"]
[ext_resource type="Texture2D" uid="uid://ci6mg8ovjriql" path="res://assets/ui/buttons/buttons_rect/1_orange_button_pick.png" id="5_s22lh"]
[ext_resource type="Texture2D" uid="uid://dch0e63ito1tq" path="res://assets/ui/buttons/buttons_rect/1_white_button.png" id="6_c8l37"]
[ext_resource type="Texture2D" uid="uid://ctuk6h7oy83p6" path="res://assets/ui/buttons/buttons_rect/1_white_button_pick.png" id="7_mlkq8"]
[ext_resource type="Texture2D" uid="uid://b5xrx2klxd5sd" path="res://assets/ui/decors/Decor_Title_options2.png" id="8_vc8rq"]
[ext_resource type="Texture2D" uid="uid://de2tpgcubddv7" path="res://assets/ui/buttons/buttons_square/11_right_arrow.png" id="9_iokg1"]
[ext_resource type="Texture2D" uid="uid://bxbxdypqdr2jn" path="res://assets/ui/buttons/buttons_square/11_right_arrow_pick.png" id="10_wxbfh"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_evpow")

[node name="Background" parent="." instance=ExtResource("2_nct3a")]

[node name="Control" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 2048.0
metadata/_edit_use_anchors_ = true

[node name="MenuBar" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -64.0
offset_right = 512.0
offset_bottom = 960.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_kbq12")
expand_mode = 1

[node name="PlayButton" type="TextureButton" parent="Control/MenuBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -384.0
offset_right = 256.0
offset_bottom = -256.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_ydvrn")
texture_pressed = ExtResource("5_s22lh")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/MenuBar/PlayButton"]
texture_filter = 1
layout_mode = 0
offset_top = 4.0
offset_right = 512.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 40
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HangarButton" type="TextureButton" parent="Control/MenuBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -224.0
offset_right = 256.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_ydvrn")
texture_pressed = ExtResource("5_s22lh")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/MenuBar/HangarButton"]
texture_filter = 1
layout_mode = 0
offset_right = 512.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 40
text = "Hangar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="TextureButton" parent="Control/MenuBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -64.0
offset_right = 256.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_ydvrn")
texture_pressed = ExtResource("5_s22lh")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/MenuBar/OptionsButton"]
texture_filter = 1
layout_mode = 0
offset_right = 512.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 40
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="Control/MenuBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = 256.0
offset_right = 256.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_c8l37")
texture_pressed = ExtResource("7_mlkq8")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/MenuBar/ExitButton"]
texture_filter = 1
layout_mode = 0
offset_right = 512.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 40
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuHeading" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -384.0
offset_top = 160.0
offset_bottom = 192.0
grow_horizontal = 0
texture = ExtResource("8_vc8rq")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="BackButton" type="TextureButton" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -192.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("9_iokg1")
texture_pressed = ExtResource("10_wxbfh")
stretch_mode = 5

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -352.0
offset_top = 64.0
offset_right = -32.0
offset_bottom = 192.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 80
text = "Menu"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="tree_exited" from="." to="." method="_on_Menu_tree_exited"]
[connection signal="pressed" from="Control/MenuBar/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/MenuBar/HangarButton" to="." method="_on_hangar_button_pressed"]
[connection signal="pressed" from="Control/MenuBar/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Control/MenuBar/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_back_button_pressed"]
